# rna-3d-stanford

./: .gitignore  README.md  pyproject.toml
docs/: competition_summary.md  data_summary.md
protein_rna_3d/: data_utils.py  datasets.py  metrics.py
scripts/: create_submission.py
tests/: test_create_submission.py  test_data_utils.py  test_datasets.py  test_metrics.py
tests/data/: bad_format_predictions.json  mismatched_len_predictions.json  non_numeric_predictions.json  test_predictions.json  test_sequences.csv
